Package: doFuture
=================

Version: 0.1.3-9000 [2016-05-08]
o ROBUSTNESS: Added package redundancy tests that runs all examples
  of the plyr package using doFuture and all known types of futures.
  These tests are not package tests and need to be run manually as
  source(system.file("tests-plyr", "examples.R", package="doFuture")).


Version: 0.1.3 [2016-05-07]
o Added package help page, i.e. help("doFuture").
o REPRODUCIBILITY: Added package tests asserting random number
  generator (RNG) reproducibility using the doRNG package.


Version: 0.1.2 [2016-05-05]
o Now foreach::getDoParWorkers() gives useful information with
  registerDoFuture() in most cases.  In cases where the number of
  workers cannot be inferred easily from future::plan() it will
  default to returning a large number (=99).


Version: 0.1.1 [2016-05-05]
o Now foreach::getDoParName() and foreach::getDoParVersion() gives
  useful information with registerDoFuture().

Version: 0.1.0 [2016-05-04]
o Created.