@@ -6,20 +6,7 @@ findRdTopics <- function(package) {
 } ## findRdTopics()
 
 
-## Tweak plyr to always use .parallel=TRUE
-tweakPlyr <- function() {
-  ns <- getNamespace("plyr")
-  llply <- getFromNamespace("llply", ns=ns)
-  formals(llply)$.parallel <- TRUE
-  assignInNamespace("llply", llply, ns=ns)
-
-  setup_parallel <- getFromNamespace("setup_parallel", ns=ns)
-  body(setup_parallel) <- body(setup_parallel)[-3]
-  assignInNamespace("setup_parallel", setup_parallel, ns=ns)
-} ## tweakPlyr()
-
-
-message("*** doFuture() - all plyr examples ...")
+message("*** doFuture() - all foreach examples ...")
 
 library("future")
 options(warnPartialMatchArgs=FALSE)
@@ -30,9 +17,8 @@ strategies <- getOption("doFuture.tests.strategies", strategies)
 
 library("doFuture")
 registerDoFuture()
-library("plyr")
-tweakPlyr()
-topics <- getOption("doFuture.tests.topics", findRdTopics("plyr"))
+library("foreach")
+topics <- getOption("doFuture.tests.topics", findRdTopics("foreach"))
 
 ## Some examples may give errors when used with futures
 excl <- getOption("doFuture.tests.topics.ignore", NULL)
@@ -41,22 +27,23 @@ topics <- setdiff(topics, excl)
 for (strategy in strategies) {
   message(sprintf("- plan('%s') ...", strategy))
   plan(strategy)
+  registerDoFuture()
 
   for (ii in seq_along(topics)) {
     topic <- topics[ii]
-    message(sprintf("- #%d of %d example(%s, package='plyr') using plan(%s) ...", ii, length(topics), topic, strategy))
+    message(sprintf("- #%d of %d example(%s, package='foreach') using plan(%s) ...", ii, length(topics), topic, strategy))
 
     ovars <- ls(all.names=TRUE)
-    example(topic, package="plyr", character.only=TRUE, ask=FALSE)
+    example(topic, package="foreach", character.only=TRUE, ask=FALSE)
     graphics.off()
     rm(list=setdiff(ls(all.names=TRUE), c(ovars, "ovars")))
 
-    message(sprintf("- #%d of %d example(%s, package='plyr') using plan(%s) ... DONE", ii, length(topics), topic, strategy))
+    message(sprintf("- #%d of %d example(%s, package='foreach') using plan(%s) ... DONE", ii, length(topics), topic, strategy))
   } ## for (ii ...)
 
   message(sprintf("- plan('%s') ... DONE", strategy))
 } ## for (strategy ...)
 
-message("*** doFuture() - all plyr examples ... DONE")
+message("*** doFuture() - all foreach examples ... DONE")
 
 options(oopts)
