@@ -3,8 +3,9 @@ Package: doFuture
 
 Version: 0.1.3-9000 [2016-05-08]
 o ROBUSTNESS: Added package redundancy tests that runs all examples
-  of the plyr package using doFuture and all known types of futures.
-  These tests are not package tests and need to be run manually as
+  of the foreach and the plyr packages using doFuture and all known
+  types of futures.  These tests are not package tests and need to
+  be run manually, e.g.
   source(system.file("tests-plyr", "examples.R", package="doFuture")).
 
 
